--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -11,10 +11,10 @@
   --font-bold: 700;
   
   /*===== Colors =====*/
-  --first-color: #CC4B2C;
-  --first-color-dark: #662616;
-  --first-color-darken: #290F09;
-  --text-color: #54423d;
+  --first-color: #4675f8;
+  --first-color-dark: #8411f0;
+  --first-color-darken: #1a2d52;
+  --text-color: #131313;
   --first-color-light: #eae7e6;
   --first-color-lighten: #FFFAFA;
   
